Phase 2 complete: all 544 cards evaluated
- Corporations: 48 evaluated (removed Beginner Corp - training only)
- Preludes: 66 evaluated
- Project cards: 429 evaluated (381 new + 48 reference)
- Tier distribution: S(5), A(28), B(97), C(211), D(85), F(3) for projects
- Generated markdown tier lists for all card types

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,16 @@ build/
 # OS
 Thumbs.db
 .DS_Store
+
+# Test files
+test_*.json
+nul
+
+# Claude Code
+.claude/
+
+# Temp batch files
+data/project_batch_*.json
+data/prelude_evaluations_N_Z_plus_A_M.json
+data/prelude_evaluations_missing.json
+data/project_evaluations_calibration.json
