--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "TM Tier Overlay",
-  "version": "2.0",
+  "version": "2.1",
   "description": "Tier ratings, game templates, and logging for Terraforming Mars",
   "permissions": ["storage"],
   "content_scripts": [{
@@ -10,6 +10,7 @@
       "data/ratings.json.js",
       "data/combos.json.js",
       "data/names_ru.json.js",
+      "data/card_effects.json.js",
       "content.js",
       "templates.js",
       "gamelog.js"
