--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,23 +1,31 @@
 {
   "manifest_version": 3,
   "name": "TM Tier Overlay",
-  "version": "4.0",
+  "version": "4.7",
   "description": "Tier ratings, game templates, and logging for Terraforming Mars",
   "permissions": ["storage"],
-  "content_scripts": [{
-    "matches": ["*://terraforming-mars.herokuapp.com/*"],
-    "js": [
-      "data/ratings.json.js",
-      "data/combos.json.js",
-      "data/names_ru.json.js",
-      "data/card_effects.json.js",
-      "content.js",
-      "templates.js",
-      "gamelog.js"
-    ],
-    "css": ["content.css"],
-    "run_at": "document_idle"
-  }],
+  "content_scripts": [
+    {
+      "matches": ["*://terraforming-mars.herokuapp.com/*"],
+      "js": ["vue-bridge.js"],
+      "world": "MAIN",
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["*://terraforming-mars.herokuapp.com/*"],
+      "js": [
+        "data/ratings.json.js",
+        "data/combos.json.js",
+        "data/names_ru.json.js",
+        "data/card_effects.json.js",
+        "content.js",
+        "templates.js",
+        "gamelog.js"
+      ],
+      "css": ["content.css"],
+      "run_at": "document_idle"
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
